--- a/dashboard2/app/views/welcome/show.html.erb
+++ b/dashboard2/app/views/welcome/show.html.erb
@@ -1,4 +1,4 @@
-<h1> Dojo Name </h1>
+<h1> Info about <%= @branch.name %> </h1>
 <p> Name: <%= @branch.name %> </p>
 <p> Street: <%= @branch.street %> </p>
 <p> City: <%= @branch.city %> </p>
